fix: use arrow instead of "to" word

--- a/docs/how-to-guides/upgrade-webiny/5.3.0-to-5.4.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.3.0-to-5.4.0.mdx
@@ -1,7 +1,7 @@
 ---
 id: 5.3.0-to-5.4.0
 title: 5.3.0 to 5.4.0
-sidebar_label: 5.3.0 to 5.4.0
+sidebar_label: 5.3.0 → 5.4.0
 keywords: ["webiny", "version", "upgrade", "5.3.0", "5.4.0"]
 description: Learn how to upgrade Webiny from 5.3.0 to 5.4.0.
 ---
