fix: adjust titles

--- a/docs/how-to-guides/upgrade-webiny/5.8.0-to-5.8.1.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.8.0-to-5.8.1.mdx
@@ -1,6 +1,6 @@
 ---
 id: 5.8.0-to-5.8.1
-title: 5.8.0 to 5.8.1
+title: Upgrade from 5.8.0 to 5.8.1
 sidebar_label: 5.8.0 → 5.8.1
 keywords: ["webiny", "version", "upgrade", "5.8.0", "5.8.1"]
 description: Learn how to upgrade Webiny from 5.8.0 to 5.8.1.
