--- a/docs/how-to-guides/upgrade-webiny/overview.mdx
+++ b/docs/how-to-guides/upgrade-webiny/overview.mdx
@@ -1,6 +1,6 @@
 ---
 id: overview
-title: Overview
+title: Upgrade from Overview
 sidebar_label: Overview
 keywords: ["webiny", "version", "upgrade"]
 description: Learn how to upgrade your Webiny project.
