--- a/docs/how-to-guides/upgrade-webiny/5.6.0-to-5.7.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.6.0-to-5.7.0.mdx
@@ -1,6 +1,6 @@
 ---
 id: 5.6.0-to-5.7.0
-title: 5.6.0 to 5.7.0
+title: Upgrade from 5.6.0 to 5.7.0
 sidebar_label: 5.6.0 → 5.7.0
 keywords: ["webiny", "version", "upgrade", "5.6.0", "5.7.0"]
 description: Learn how to upgrade Webiny from 5.6.0 to 5.7.0.
