fix: reword changelog

--- a/docs/changelog/5.8.1.mdx
+++ b/docs/changelog/5.8.1.mdx
@@ -6,19 +6,38 @@ keywords: ["webiny", "version", "5.8.1", "changelog"]
 description: See what's new in Webiny version 5.8.1.
 ---
 
+import ChangelogItem from '@components/ChangelogItem';
+import ChangelogSection from '@components/ChangelogSection';
+
+
 # Changes
 
 This document highlights the most important fixes, improvements, and features, that were introduced in Webiny `5.8.1`.
 
 :::info How To Upgrade?
+
 Please check the [Webiny 5.8.1 migration guide](/docs/how-to-guides/upgrade-webiny/5.8.0-to-5.8.1) for the upgrade steps.
+
 :::
 
-## Headless CMS
+<ChangelogSection title={"Headless CMS"}/>
 
-### Fixed some bugs
-1. Sometimes rich-text field was not compressed before storing it to the DynamoDB / Elasticsearch.
-2. In the UI cache broke due to non-existing GraphQL query cache key.
+<ChangelogItem prNumber={1709} title="Rich-text field not being compressed"/>
 
-### Storage operations types
+Fixed an error-case in which the content of the rich-text field was not compressed, before being stored to the database.
+
+<ChangelogItem prNumber={1709} title="Storage operations types"/>
+
 There are some changes in the typings for the storage operations which make it a bit simpler to use.
+
+<ChangelogItem prNumber={1709} title="Storage operations types"/>
+
+In the UI cache broke due to non-existing GraphQL query cache key.
+
+
+
+
+
+
+
+
