fix: update titles

--- a/docs/changelog/5.8.1.mdx
+++ b/docs/changelog/5.8.1.mdx
@@ -22,17 +22,17 @@ Please check the [Webiny 5.8.1 migration guide](/docs/how-to-guides/upgrade-webi
 
 <ChangelogSection title={"Headless CMS"}/>
 
-<ChangelogItem prNumber={1709} title="Rich-text field not being compressed"/>
+<ChangelogItem prNumber={1709} title="Rich-text Field Not Being Compressed"/>
 
 Fixed an error-case in which the content of the rich-text field was not compressed, before being stored to the database.
 
-<ChangelogItem prNumber={1709} title="Storage operations types"/>
-
-There are some changes in the typings for the storage operations which make it a bit simpler to use.
-
-<ChangelogItem prNumber={1709} title="Storage operations types"/>
+<ChangelogItem prNumber={1709} title="Fixed a UI-caching Issue"/>
 
 In the UI cache broke due to non-existing GraphQL query cache key.
+
+<ChangelogItem prNumber={1709} title="Updated Storage Operations Types"/>
+
+There are some changes in the typings for the storage operations which make it a bit simpler to use.
 
 
 
