--- a/docs/changelog/5.9.0.mdx
+++ b/docs/changelog/5.9.0.mdx
@@ -10,6 +10,9 @@ import CenteredImage from "@components/CenteredImage";
 import ChangelogItem from "@components/ChangelogItem";
 import ChangelogSection from "@components/ChangelogSection";
 
+import securityPackages from "./5.9.0/security-packages.png";
+import webpackError from "./5.9.0/webpack-error.png";
+
 # Changes
 
 This document highlights the most important fixes, improvements, and features, that were introduced in Webiny `5.9.0`.
@@ -17,6 +20,23 @@ This document highlights the most important fixes, improvements, and features, t
 :::info How To Upgrade?
 Please check the [Webiny 5.9.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.8.0-to-5.9.0) for the upgrade steps.
 :::
+
+<ChangelogSection title="Security and Admin Users" />
+<ChangelogItem prNumber="1693" title="Reorganize Security Packages" />
+
+Security layer in Webiny consists of plugins spread across several packages. Up until now, it was difficult to navigate these packages and understand the responsibilities of each one of them. We've restructured and refactored the code into packages with better naming, proper separation of concerns, and we've also introduced several new plugins to make integrations and extending easier.
+
+This is an overview of all new packages. As you can see, it's now easy to follow the API/React counterparts and get an idea of what each one of them does:
+
+<CenteredImage title="API and React Security Packages" src={securityPackages} />
+
+If you're building a custom user signup flow, this will now help you see how the Admin Area users work. Feel free to borrow the ideas for your own apps.
+
+<ChangelogItem prNumber="1693" title="Fix Handling of Emails That Contain Special Characters" />
+
+There was a bug with user's emails containing special characters, like `john+doe@email.com`. The `+` would crash the app entirely once it made its way to the URL, like `/users?login=john+doe@email.com`. This is now sorted, and email addresses are now properly encoded/decoded.
+
+A shoutout to [@xintellion](https://github.com/xintellion) for spotting and reporting this one! 🙌 🍻
 
 <ChangelogSection title="File Manager" />
 
@@ -27,3 +47,11 @@ Please check the [Webiny 5.9.0 migration guide](/docs/how-to-guides/upgrade-webi
 When files are uploaded via File Manager, ultimately, they must always be served to users over a CDN ([Amazon Cloudfront](https://aws.amazon.com/cloudfront/)). This was true for images, but in every other case, files would be directly served from S3, making the actual file download less optimal.
 
 This has now been taken care of. Whenever possible, all types of files will be served from a CDN.
+
+<ChangelogSection title="Lambda Builds" />
+
+<ChangelogItem prNumber="1693" title="Improve Function Bundling Error Output" />
+
+Previously, if webpack threw an error during Lambda function builds, you'd get a wall of irrelevant and meaningless stack output, and you'd have to scroll hundreds and hundreds of lines to get to the top of it, to see the actual error. Not any more 😎. With this release, Lambda function builds will only print the relevant error information:
+
+<CenteredImage title="Lambda Function Build Error" src={webpackError} />
