feat: 5.8.1 upgrade and changelog (#300)

--- a/docs/changelog/5.9.0.mdx
+++ b/docs/changelog/5.9.0.mdx
@@ -55,3 +55,17 @@ This has now been taken care of. Whenever possible, all types of files will be s
 Previously, if webpack threw an error during Lambda function builds, you'd get a wall of irrelevant and meaningless stack output, and you'd have to scroll hundreds and hundreds of lines to get to the top of it, to see the actual error. Not any more 😎. With this release, Lambda function builds will only print the relevant error information:
 
 <CenteredImage title="Lambda Function Build Error" src={webpackError} />
+
+<ChangelogSection title={"Headless CMS"}/>
+
+<ChangelogItem prNumber={1709} title="Rich-text Field Not Being Compressed"/>
+
+Fixed an error-case in which the content of the rich-text field was not compressed, before being stored to the database.
+
+<ChangelogItem prNumber={1709} title="Fixed a UI-caching Issue"/>
+
+In the UI cache broke due to non-existing GraphQL query cache key.
+
+<ChangelogItem prNumber={1709} title="Updated Storage Operations Types"/>
+
+There are some changes in the typings for the storage operations which make it a bit simpler to use.
