--- a/docs/how-to-guides/upgrade-webiny/5.5.0-to-5.6.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.5.0-to-5.6.0.mdx
@@ -1,7 +1,7 @@
 ---
 id: 5.5.0-to-5.6.0
-title: 5.5.0 to 5.6.0
-sidebar_label: 5.5.0 to 5.6.0
+title: Upgrade from 5.5.0 to 5.6.0
+sidebar_label: 5.5.0 → 5.6.0
 keywords: ["webiny", "version", "upgrade", "5.5.0", "5.6.0"]
 description: Learn how to upgrade Webiny from 5.5.0 to 5.6.0.
 ---
