--- a/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.7.0-to-5.8.0.mdx
@@ -1,7 +1,7 @@
 ---
 id: 5.7.0-to-5.8.0
-title: 5.7.0 to 5.8.0
-sidebar_label: 5.7.0 to 5.8.0
+title: Upgrade from 5.7.0 to 5.8.0
+sidebar_label: 5.7.0 → 5.8.0
 keywords: ["webiny", "version", "upgrade", "5.7.0", "5.8.0"]
 description: Learn how to upgrade Webiny from 5.7.0 to 5.8.0.
 ---
