--- a/docs/how-to-guides/upgrade-webiny/5.8.0-to-5.9.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.8.0-to-5.9.0.mdx
@@ -1,7 +1,7 @@
 ---
 id: 5.8.0-to-5.9.0
-title: 5.8.0 to 5.9.0
-sidebar_label: 5.8.0 to 5.9.0
+title: Upgrade from 5.8.0 to 5.9.0
+sidebar_label: 5.8.0 → 5.9.0
 keywords: ["webiny", "version", "upgrade", "5.8.0", "5.9.0"]
 description: Learn how to upgrade Webiny from 5.8.0 to 5.9.0.
 ---
@@ -44,7 +44,7 @@ The upgrade script will make a couple of changes to your existing **API** projec
 Before running the `webiny upgrade` command, we recommend that you commit any active code changes you might have in your working branch.
 :::
 
-## 3. Deploy Your Project and Finish the Upgrade in the Webiny Admin Area
+## 3. Deploy Your Project
 
 Finally, proceed by re-deploying your Webiny project:
 
@@ -62,15 +62,3 @@ If the upgrade wizard does not show, try clearing cookies, local storage, and lo
 :::caution
 As stated in the [Overview](/docs/how-to-guides/upgrade-webiny/overview#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 :::
-
-## Optional - Upgrade Custom Elasticsearch Plugins
-
-:::info
-The following only applies to users who have created custom Elasticsearch plugins in their application code.
-:::
-
-In this release, we introduced the [elastic-ts](https://github.com/jacobwgillespie/elastic-ts) package, which enables us to have a more robust Typescript support while writing Elasticsearch-related code (for example, performing Elasticsearch queries).
-
-Due to changing from our own types to this library, there is a change that you must do in your custom Elasticsearch plugins which concern the `query`.
-
-Our `ElasticsearchQuery` type had `mustNot` property, but `elastic-ts` `BoolQueryConfig` has `must_not` property. You need to change that property if you had it in your plugins.
