--- a/docs/how-to-guides/upgrade-webiny/5.0.0-beta.4-to-5.0.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.0.0-beta.4-to-5.0.0.mdx
@@ -1,7 +1,7 @@
 ---
 id: 5.0.0-beta.4-to-5.0.0
-title: 5.0.0-beta.4 to 5.0.0
-sidebar_label: 5.0.0-beta.4 to 5.0.0
+title: Upgrade from 5.0.0-beta.4 to 5.0.0
+sidebar_label: 5.0.0-beta.4 → 5.0.0
 keywords: ["webiny", "version", "upgrade"]
 description: Learn how to upgrade Webiny from 5.0.0-beta.4 to 5.0.0.
 ---
