feat: add DX/Scaffolding entry

--- a/docs/changelog/5.9.0.mdx
+++ b/docs/changelog/5.9.0.mdx
@@ -12,6 +12,7 @@ import ChangelogSection from "@components/ChangelogSection";
 
 import securityPackages from "./5.9.0/security-packages.png";
 import webpackError from "./5.9.0/webpack-error.png";
+import scaffolds from "./5.9.0/scaffolds.gif";
 
 # Changes
 
@@ -25,7 +26,10 @@ Please check the [Webiny 5.9.0 migration guide](/docs/how-to-guides/upgrade-webi
 
 <ChangelogItem prNumber="1720" title="Improved Scaffolding" />
 
+
 For this release, we've gone through a complete overhaul of the existing **GraphQL API Package** and **Admin Area Package**. The following are some of the most important changes we made.
+
+<CenteredImage title="Improved Scaffolding" src={scaffolds} />
 
 :::tip
 To learn more about the changes we made and the reasoning behind them, check out the dedicated [Webiny 5.9.0 - Improved Scaffolding](#) blog post.
@@ -81,7 +85,7 @@ This is no longer the case. Everything happens automatically, which we believe w
 
 Previously, if Webpack threw an error during AWS Lambda function code builds, you'd get a wall of irrelevant and meaningless stack output, and you'd have to scroll through dozens of lines to get to the top of it, to see the actual error. With this release, AWS Lambda function code builds will only print the relevant error information:
 
-<CenteredImage title="Lambda Function Build Error" src={webpackError} />
+<CenteredImage title="AWS Lambda Function Build Error" src={webpackError} />
 
 
 <ChangelogSection title="Security" />
