fix: update the upgrade guide

--- a/docs/how-to-guides/upgrade-webiny/5.8.0-to-5.9.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.8.0-to-5.9.0.mdx
@@ -29,7 +29,7 @@ yarn up "@webiny/*@5.9.0"
 
 Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.9.0`.
 
-## 2. Upgrade API Project Application's Code
+## 2. Run the Upgrade Command
 
 Once all of the Webiny packages have been upgraded, continue by running the following upgrade command:
 
@@ -41,7 +41,7 @@ yarn webiny upgrade 5.9.0
 The upgrade script will make a couple of changes to your existing **API** project application's code (located within the `api` folder). Once the upgrade command has finished, you can run the [`git status`](https://git-scm.com/docs/git-status) command to see all changes that the command performed.
 
 :::info
-Before running the `webiny upgrade` command, we recommend that you commit any active code changes you might have in your working branch.
+Before running the `webiny upgrade` command, no active code changes must be present in your working branch.
 :::
 
 ## 3. Deploy Your Project
@@ -53,12 +53,10 @@ Finally, proceed by re-deploying your Webiny project:
 yarn webiny deploy --env {environment}
 ```
 
-Then, open your existing Admin Area application in your browser, and follow the instructions presented in the upgrade wizard. Note that, depending on the amount of data in the database, the upgrade process might take anywhere from a few seconds to a couple of minutes in order to finish.
-
-:::info
-If the upgrade wizard does not show, try clearing cookies, local storage, and logging back in. If the problem persists, verify that the previous steps were performed correctly. Finally, for further assistance, please don't hesitate to post a question in our [Community Slack #help](https://webiny-community.slack.com/archives/C014Y0HGJ0Y) channel.
-:::
-
 :::caution
 As stated in the [Overview](/docs/how-to-guides/upgrade-webiny/overview#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
+:::
+
+:::tip
+Learn more about different deployment environments in the [CI/CD / Environments](/docs/key-topics/ci-cd/environments) key topic.
 :::
