--- a/docs/how-to-guides/upgrade-webiny/5.8.0-to-5.9.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.8.0-to-5.9.0.mdx
@@ -7,44 +7,53 @@ description: Learn how to upgrade Webiny from 5.8.0 to 5.9.0.
 ---
 
 :::tip What you’ll learn
+
 - how to upgrade Webiny from 5.8.0 to 5.9.0
-:::
+  :::
 
 :::danger
 Before continuing, make sure to take the necessary precautions, listed in the [Overview](/docs/how-to-guides/upgrade-webiny/overview#-precaution-measures) section.
 :::
 
 :::info
-Make sure to check out the [5.9.0 changelog](/docs/changelog/5.9.0) to get familiar with all the changes  introduced in this release.
+Make sure to check out the [5.9.0 changelog](/docs/changelog/5.9.0) to get familiar with all the changes introduced in this release.
 :::
 
-## 1. Upgrade Webiny Packages
+## 1. Project Preparation
 
-The first step is to upgrade all `@webiny/*` packages, which can be done by running the following command in the root of your project:
+First, we need to prepare your project for the upgrade process. With security packages refactor, some packages no longer exist, and if we try to upgrade dependencies straight away, `yarn` will complain. To fix that, we need to clean up your project first, to eliminate references to those deprecated packages.
+
+In your project root, run the following:
 
 ```bash
-# Execute in your project root.
+npx https://gist.github.com/Pavel910/abc4c063eae8c18754d6a026d1fc1d06
+```
+
+## 2. Upgrade Webiny Packages
+
+We're now ready to upgrade all `@webiny/*` packages! Run the following command:
+
+```bash
 yarn up "@webiny/*@5.9.0"
 ```
 
 Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.9.0`.
 
-## 2. Run the Upgrade Command
+:::info
+Before moving on, make sure you commit all your changes.
+:::
 
-Once all of the Webiny packages have been upgraded, continue by running the following upgrade command:
+## 3. Run the Upgrade Command
+
+Now let's run the project upgrade:
 
 ```bash
-# Execute in your project root.
 yarn webiny upgrade 5.9.0
 ```
 
 The upgrade script will make a couple of changes to your existing **API** project application's code (located within the `api` folder). Once the upgrade command has finished, you can run the [`git status`](https://git-scm.com/docs/git-status) command to see all changes that the command performed.
 
-:::info
-Before running the `webiny upgrade` command, no active code changes must be present in your working branch.
-:::
-
-## 3. Deploy Your Project
+## 4. Deploy Your Project
 
 Finally, proceed by re-deploying your Webiny project:
 
