fix: apply minor rewording

--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
@@ -107,13 +107,13 @@ Exports a single [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/9e4904
 
 [`views/`](https://github.com/webiny/webiny-js/tree/next/packages/cli-plugin-scaffold-admin-app-module/template/views)
 
-Contains all of the React components and [hooks](/webiny/webiny-js/tree/next/packages/cli-plugin-scaffold-admin-app-module/template/views/hooks) that form the CRUD view.
+Contains all of the React components and [hooks](https://github.com/webiny/webiny-js/tree/next/packages/cli-plugin-scaffold-admin-app-module/template/views/hooks) that form the CRUD view.
 
 ### First Deploy
 
 #### Admin Area React Application
 
-Since the Admin Area React application can be developed locally, there's no need to perform any additional deployments.
+Since the Admin Area React application can be developed locally, once you've completed the scaffold's setup wizard, there's no need to perform any additional deployments
 
 #### GraphQL API
 
@@ -138,7 +138,7 @@ The first command initiates a new local development server and a watch session o
 The second command initiates a watch session on the GraphQL API application code and ensures that every change we perform is automatically deployed into the cloud.
 
 :::info
-Check out the [Extend GraphQL API Development](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#development) section for more information.
+Check out the [Extend GraphQL API - Development](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#development) section for more information on how to continue developing the supporting GraphQL API.
 :::
 
 <!-- ### Adding New Fields -->
