fix: minor reword

--- a/docs/how-to-guides/webiny-cli/scaffolding/introduction.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/introduction.mdx
@@ -19,7 +19,7 @@ import ghActions from "./ci-cd/gh_actions_logo.png";
 
 ## Scaffolding
 
-Essentially, scaffolding is a process which, based on the passed arguments, performs one (or more) of the following actions:
+In general, scaffolding is a process which, based on the passed arguments, performs one (or more) of the following actions:
 
 - generates repetitive (also known as "boilerplate") code, which we don't want to keep writing every time from scratch
 - generates more complete setups, like a new [project application](/docs/key-topics/project-organization/project-applications-and-packages/), a standalone GraphQL API, and so on
