fix: use v5.9.0 tag in GH links

--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
@@ -29,7 +29,7 @@ The **Extend Admin Area** scaffold (previously **Admin Area Package**) received 
 The **Extend Admin Area** scaffold creates a new module in the Webiny Admin Area React application and extends your GraphQL API with
   supporting [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) query and mutation operations.
 
-Note that when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/next/packages/cwp-template-aws/template/api/code/graphql) folder.
+Note that when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/api/code/graphql) folder.
 
 :::info
 Learn more about the **API** project application on the cloud infrastructure level in the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/api/introduction) key topics section.
@@ -75,12 +75,12 @@ The locales selector is visible only when there are two or more locales to choos
 
 ### No Additional Cloud Infrastructure Resources
 
-The scaffold does not add any additional cloud infrastructure resources. The generated application code is simply added to the existing Admin Area React application code ([`apps/admin/code`](https://github.com/webiny/webiny-js/tree/v5/packages/cwp-template-aws/template/apps/admin/code)).
+The scaffold does not add any additional cloud infrastructure resources. The generated application code is simply added to the existing Admin Area React application code ([`apps/admin/code`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/apps/admin/code)).
 
-Of course, if additional cloud infrastructure resources are needed, you're free amend the [existing cloud infrastructure code](https://github.com/webiny/webiny-js/tree/next/packages/cwp-template-aws/template/apps/admin/pulumi), and reference added and deployed resources in your application code.
+Of course, if additional cloud infrastructure resources are needed, you're free amend the [existing cloud infrastructure code](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/apps/admin/pulumi), and reference added and deployed resources in your application code.
 
 :::tip
-Supporting GraphQL API has its own cloud infrastructure code, located in the [`api/pulumi`](https://github.com/webiny/webiny-js/tree/next/packages/cwp-template-aws/template/apps/admin/pulumi) folder. So, if you're planning to add new cloud infrastructure resources that will be referenced within your GraphQL API application code, it makes more sense to introduce cloud infrastructure code changes there, and not in the [`apps/admin/pulumi`](https://github.com/webiny/webiny-js/tree/next/packages/cwp-template-aws/template/apps/admin/pulumi), linked above.
+Supporting GraphQL API has its own cloud infrastructure code, located in the [`api/pulumi`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/apps/admin/pulumi) folder. So, if you're planning to add new cloud infrastructure resources that will be referenced within your GraphQL API application code, it makes more sense to introduce cloud infrastructure code changes there, and not in the [`apps/admin/pulumi`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/apps/admin/pulumi), linked above.
 :::
 
 ## Development
@@ -105,9 +105,9 @@ Export a single [`MenuPlugin`](https://github.com/webiny/webiny-js/blob/9e490409
 
 Exports a single [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/9e490409f0367c596f9ee112ad57c265c74ff8d6/packages/app/src/plugins/RoutePlugin.tsx#L8) plugin that's responsible for creating a new route (URL), on which the CRUD view will be rendered.
 
-[`views/`](https://github.com/webiny/webiny-js/tree/next/packages/cli-plugin-scaffold-admin-app-module/template/views)
+[`views/`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cli-plugin-scaffold-admin-app-module/template/views)
 
-Contains all of the React components and [hooks](https://github.com/webiny/webiny-js/tree/next/packages/cli-plugin-scaffold-admin-app-module/template/views/hooks) that form the CRUD view.
+Contains all of the React components and [hooks](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cli-plugin-scaffold-admin-app-module/template/views/hooks) that form the CRUD view.
 
 ### First Deploy
 
