--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api.mdx
@@ -23,7 +23,7 @@ The **Extend GraphQL API** scaffold (previously GraphQL **API Package**) receive
 
 The **Extend GraphQL API** scaffold extends your project's GraphQL HTTP API with new [CRUD](https://en.wikipedia.org/wiki/Create,_read,_update_and_delete) query and mutation operations.
 
-Note that when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/next/packages/cwp-template-aws/template/api/code/graphql) folder.
+Note that when we say GraphQL HTTP API, by default, we're referring to the one deployed as part of the **API** project application, located within the [`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/api/code/graphql) folder.
 
 :::info
 Learn more about the **API** project application on the cloud infrastructure level in the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/api/introduction) key topics section.
@@ -93,7 +93,7 @@ The generated application code follows the same idea. There aren't any additiona
 
 ### Testing Setup
 
-With the application code, the scaffold also generates one unit, one integration, and one end-to-end (E2E) test, which you can use as a reference in further development. All of the tests can be found in the [`__tests__`](https://github.com/webiny/webiny-js/tree/v5/packages/cli-plugin-scaffold-graphql-service/template/__tests__) folder located within the scaffolded application code. More on this in the [Development](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#development) section below.
+With the application code, the scaffold also generates one unit, one integration, and one end-to-end (E2E) test, which you can use as a reference in further development. All of the tests can be found in the [`__tests__`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cli-plugin-scaffold-graphql-service/template/__tests__) folder located within the scaffolded application code. More on this in the [Development](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api#development) section below.
 
 :::tip
 A brief overview of different types of tests can be found in the [CI/CD / Testing](/docs/key-topics/ci-cd/testing#application-testing---a-brief-overview) key topic.
@@ -101,9 +101,9 @@ A brief overview of different types of tests can be found in the [CI/CD / Testin
 
 ### No Additional Cloud Infrastructure Resources
 
-The scaffold does not add any additional cloud infrastructure resources. The generated application code is simply added to the existing GraphQL API application code ([`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5/packages/cwp-template-aws/template/api/code/graphql)).
+The scaffold does not add any additional cloud infrastructure resources. The generated application code is simply added to the existing GraphQL API application code ([`api/code/graphql`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/api/code/graphql)).
 
-Of course, if additional cloud infrastructure resources are needed, you're free amend the [existing cloud infrastructure code](https://github.com/webiny/webiny-js/tree/next/packages/cwp-template-aws/template/api/pulumi), and reference added and deployed resources in your application code.
+Of course, if additional cloud infrastructure resources are needed, you're free amend the [existing cloud infrastructure code](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/api/pulumi), and reference added and deployed resources in your application code.
 
 ## Development
 
@@ -125,17 +125,17 @@ A file that contains the schema with which we are extending our GraphQL API. Thi
 
 Note that in the case of the latter, you will also need to define a standalone resolver function that will be responsible for handling newly added query or mutation operation.
 
-[`resolvers/`](https://github.com/webiny/webiny-js/tree/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers)
+[`resolvers/`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cli-plugin-scaffold-graphql-service/template/resolvers)
 
 This folder contains the GraphQL resolver classes that support the generated [query](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers/TargetDataModelsQuery.ts) and [mutation](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers/TargetDataModelsMutation.ts) GraphQL operations.
 
 These will need be updated as you make changes in the mentioned [`typeDefs.ts`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/typeDefs.ts) file. For example, if you were to introduce a new `listPopularCarManufacturers` GraphQL query, the same `listPopularCarManufacturers` method would need to be defined within the [`CarManufacturersQuery`](https://github.com/webiny/webiny-js/blob/next/packages/cli-plugin-scaffold-graphql-service/template/resolvers/TargetDataModelsQuery.ts) class.
 
-[`entities/`](https://github.com/webiny/webiny-js/tree/next/packages/cli-plugin-scaffold-graphql-service/template/entities)
+[`entities/`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cli-plugin-scaffold-graphql-service/template/entities)
 
 Contains [DynamoDB Toolbox](https://github.com/jeremydaly/dynamodb-toolbox) entities, which are used within GraphQL resolver functions. You are free to add additional entities, or modify the existing one (for example - add new entity attributes).
 
-[`__tests__/`](https://github.com/webiny/webiny-js/tree/next/packages/cli-plugin-scaffold-graphql-service/template/__tests__)
+[`__tests__/`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cli-plugin-scaffold-graphql-service/template/__tests__)
 
 Contains tests that ensure your application code is working as expected. As mentioned, three tests are included by default: one unit, one integration, and one end-to-end (E2E) test.
 
