fix: remove plural

--- a/docs/how-to-guides/webiny-cli/scaffolding/introduction.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/introduction.mdx
@@ -37,5 +37,5 @@ The following is a list of currently available scaffolds:
 - [Extend Admin Area](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area)
 - [Extend GraphQL API](/docs/how-to-guides/webiny-cli/scaffolding/extend-graphql-api)
 - [Set up CI/CD](/docs/how-to-guides/webiny-cli/scaffolding/ci-cd)
-- React Component Packages
+- React Component Package
 
