fix: add a note for "GraphQL API Package" scaffold users

--- a/docs/how-to-guides/upgrade-webiny/5.8.0-to-5.9.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.8.0-to-5.9.0.mdx
@@ -60,3 +60,21 @@ As stated in the [Overview](/docs/how-to-guides/upgrade-webiny/overview#pre-prod
 :::tip
 Learn more about different deployment environments in the [CI/CD / Environments](/docs/key-topics/ci-cd/environments) key topic.
 :::
+
+## Additional Steps and Notes
+
+### GraphQL API Package Scaffold
+
+If you've been using the **GraphQL API Package** scaffold in your Webiny project prior to the `5.9.0` release, you will have to revisit the created [`types.ts`](https://github.com/webiny/webiny-js/blob/v5.8.0/packages/cli-plugin-scaffold-graphql-service/template/src/types.ts#L7) file for each created package, and replace the following line:
+
+```ts
+import { TenancyContext } from "@webiny/api-security-tenancy/types";
+```
+
+Replace it with the following import statement:
+
+```ts
+import { TenancyContext } from "@webiny/api-tenancy/types";
+```
+
+This change is needed simply because of the fact that the `@webiny/api-security-tenancy` package doesn't exist anymore. Note that the new `@webiny/api-tenancy` package should already exist in your project. No need to add it manually.
