chore: add post-upgrade command

--- a/docs/how-to-guides/upgrade-webiny/5.8.0-to-5.9.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.8.0-to-5.9.0.mdx
@@ -54,7 +54,17 @@ yarn webiny upgrade 5.9.0
 
 The upgrade script will make a couple of changes to your existing **API** project application's code (located within the `api` folder). Once the upgrade command has finished, you can run the [`git status`](https://git-scm.com/docs/git-status) command to see all changes that the command performed.
 
-## 4. Deploy Your Project
+## 4. Post Upgrade Script
+
+To finalize the upgrade, run the following command:
+
+```bash
+npx https://gist.github.com/Pavel910/4a7a9694945fffcc65b293de8091116b
+```
+
+This takes care of a small glitch in the upgrade process, which we noticed _after_ we released the 5.9.0 code. Gists to the rescue!
+
+## 5. Deploy Your Project
 
 Finally, proceed by re-deploying your Webiny project:
 
@@ -87,4 +97,4 @@ Replace it with the following import statement:
 import { TenancyContext } from "@webiny/api-tenancy/types";
 ```
 
-This change is needed simply because of the fact that the `@webiny/api-security-tenancy` package doesn't exist anymore. Note that the new `@webiny/api-tenancy` package should already exist in your project. No need to add it manually.
+This change is required simply because the `@webiny/api-security-tenancy` package doesn't exist anymore. Note that the new `@webiny/api-tenancy` package should already exist in your project, so there's no need to add it manually.
