fix: restore markdown headings

--- a/docs/changelog/5.9.0.mdx
+++ b/docs/changelog/5.9.0.mdx
@@ -7,8 +7,6 @@ description: See what's new in Webiny version 5.9.0.
 ---
 
 import CenteredImage from "@components/CenteredImage";
-import ChangelogItem from "@components/ChangelogItem";
-import ChangelogSection from "@components/ChangelogSection";
 
 import securityPackages from "./5.9.0/security-packages.png";
 import webpackError from "./5.9.0/webpack-error.png";
@@ -22,10 +20,9 @@ This document highlights the most important fixes, improvements, and features, t
 Please check the [Webiny 5.9.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.8.0-to-5.9.0) for the upgrade steps.
 :::
 
-<ChangelogSection title="Development" />
+## Development
 
-<ChangelogItem prNumber="1720" title="Improved Scaffolding" />
-
+### Improved Scaffolding([#1720](https://github.com/webiny/webiny-js/pull/1720))
 
 For this release, we've gone through a complete overhaul of the existing **GraphQL API Package** and **Admin Area Package**. The following are some of the most important changes we made.
 
@@ -83,20 +80,19 @@ Not only this makes the overall codebase easier to grasp, but also removes all o
 
 ##### No Manual Steps Required
 
-Prior to this release, once the **GraphQL API Package** and **Admin Area Package**  scaffolds have finished generating code, users were still required to complete a couple of manual steps, like  registering the newly generated plugins in their application code, executing GraphQL (installation) mutations via the deployed GraphQL API, and so on.
+Prior to this release, once the **GraphQL API Package** and **Admin Area Package** scaffolds have finished generating code, users were still required to complete a couple of manual steps, like registering the newly generated plugins in their application code, executing GraphQL (installation) mutations via the deployed GraphQL API, and so on.
 
 This is no longer the case. Everything happens automatically, which we believe will additionally improve the overall development experience.
 
-<ChangelogItem prNumber="1693" title="Improved AWS Lambda Function Bundling Error Output" />
+### Improved AWS Lambda Function Bundling Error Output ([#1693](https://github.com/webiny/webiny-js/pull/1693))
 
 Previously, if Webpack threw an error during AWS Lambda function code builds, you'd get a wall of irrelevant and meaningless stack output, and you'd have to scroll through dozens of lines to get to the top of it, to see the actual error. With this release, AWS Lambda function code builds will only print the relevant error information:
 
 <CenteredImage title="AWS Lambda Function Build Error" src={webpackError} />
 
+## Security
 
-<ChangelogSection title="Security" />
-
-<ChangelogItem prNumber="1693" title="Reorganize Security Packages" />
+### Reorganize Security Packages ([#1693](https://github.com/webiny/webiny-js/pull/1693))
 
 Security layer in Webiny consists of plugins spread across several packages. Up until now, it was difficult to navigate these packages and understand the responsibilities of each one of them. We've restructured and refactored the code into packages with better naming, proper separation of concerns, and we've also introduced several new plugins to make integrations and extending easier.
 
@@ -106,22 +102,22 @@ This is an overview of all new packages. As you can see, it's now easy to follow
 
 If you're building a custom user signup flow, this will now help you see how the Admin Area users work. Feel free to borrow the ideas for your own apps.
 
-<ChangelogItem prNumber="1693" title="Fix Handling of Emails That Contain Special Characters" />
+### Fix Handling of Emails That Contain Special Characters ([#1693](https://github.com/webiny/webiny-js/pull/1693))
 
 There was a bug with user's emails containing special characters, like `john+doe@email.com`. The `+` would crash the app entirely once it made its way to the URL, like `/users?login=john+doe@email.com`. This is now sorted, and email addresses are now properly encoded/decoded.
 
 A shoutout to [@xintellion](https://github.com/xintellion) for spotting and reporting this one! 🙌 🍻
 
-<ChangelogSection title="File Manager" />
+## File Manager
 
-<ChangelogItem prNumber="1710" title="Fixed Serving of Non-Image Files" />
+### Fixed Serving of Non-Image Files ([#1710](https://github.com/webiny/webiny-js/pull/1710))
 
 When files are uploaded via [File Manager](https://www.webiny.com/serverless-app/file-manager/), ultimately, they must always be served to users over a CDN ([Amazon Cloudfront](https://aws.amazon.com/cloudfront/)). This was true for images, but in every other case, files would be directly served from S3, making the actual file download less optimal.
 
 This has now been taken care of. Whenever possible, all types of files will be served from a CDN.
 
-<ChangelogSection title={"Headless CMS"}/>
+## Headless CMS
 
-<ChangelogItem prNumber={1709} title="Rich-text Field Not Being Compressed"/>
+### Rich-text Field Not Being Compressed ([#1709](https://github.com/webiny/webiny-js/pull/1709))
 
 Fixed an error-case in which the content of the rich-text field was not compressed, before being stored to the database.
