fix: remove double "In general"

--- a/docs/how-to-guides/webiny-cli/scaffolding/introduction.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/introduction.mdx
@@ -26,7 +26,7 @@ In general, scaffolding is a process which, based on the passed arguments, perfo
 - performs operations with different services, e.g. sets up a CI/CD process with a CI/CD provider of your choice
 - and more
 
-In general, by enabling developers to skip all of the manual and often tedious work, the goal of scaffolding is to speed up the development process and, ultimately, make developers' lives easier.
+By enabling developers to skip all of the manual and often tedious work, the goal of scaffolding is to speed up the development process and, ultimately, make developers' lives easier.
 
 ## Available Scaffolds
 
