--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
@@ -44,7 +44,7 @@ As mentioned in the overview, the scaffold creates a new module in the Webiny Ad
 2. a new route (URL) on which the CRUD view is being rendered
 3. a new item in the main menu, which, when clicked, redirects the user to the new route (URL)
 
-As an example, during the scaffold's setup wizard, if we were to enter `CarManufacturer` as the initial data model name, we'd end up with the following:
+As an example, during the scaffold's wizard, if we were to enter `CarManufacturer` as the initial data model name, we'd end up with the following:
 
 1. a CRUD view which let us perform basic CRUD operations on car manufacturer entries
 2. a new `/car-manufacturers` route
@@ -114,11 +114,11 @@ Contains all of the React components and [hooks](https://github.com/webiny/webin
 
 #### Admin Area React Application
 
-Since the Admin Area React application can be developed locally, once you've completed the scaffold's setup wizard, there's no need to perform any additional deployments
+Since the Admin Area React application can be developed locally, once you've completed the scaffold's wizard, there's no need to perform any additional deployments
 
 #### GraphQL API
 
-Once you've completed the scaffold's setup wizard, in order to actually see the changes made to your GraphQL API, you need to deploy them. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them. More on this below.
+Once you've completed the scaffold's wizard, in order to actually see the changes made to your GraphQL API, you need to deploy them. This can be done as usual via the [`webiny deploy`](/docs/how-to-guides/deployment/deploy-your-project) command, or, even easier, if you're about to jump straight into coding, by running the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command. This command will not only deploy the changes, but also start a new watch session, which will automatically redeploy further application code changes, as you perform them. More on this below.
 
 ### Development Using the Watch Command
 
