fix: add missing "s"

--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
@@ -46,7 +46,7 @@ As mentioned in the overview, the scaffold creates a new module in the Webiny Ad
 
 As an example, during the scaffold's wizard, if we were to enter `CarManufacturer` as the initial data model name, we'd end up with the following:
 
-1. a CRUD view which let us perform basic CRUD operations on car manufacturer entries
+1. a CRUD view which lets us perform basic CRUD operations on car manufacturer entries
 2. a new `/car-manufacturers` route
 3. a new **Car Manufacturers** item in the main menu
 
