fix: remove unnecessary part of sentence

--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
@@ -53,7 +53,7 @@ As an example, during the scaffold's wizard, if we were to enter `CarManufacture
 <CenteredImage src={scaffoldsAdminArea} shadow={false} alt={"New Webiny Admin Area Module"} />
 
 :::info
-As seen in the screenshot, note that initially all entries consist of two text fields: `title` and `description`. Naturally, based on your requirements, you can remove these fields or add new ones. More on this in the [Development](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area#development) section below.
+Note that initially all entries consist of two text fields: `title` and `description`. Naturally, based on your requirements, you can remove these fields or add new ones. More on this in the [Development](/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area#development) section below.
 :::
 
 ### New CRUD Query and Mutation Operations
