fix: remove passive voice

--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
@@ -64,9 +64,9 @@ In order to do this, internally, the scaffold is simply utilizing the existing *
 
 ### Multi-Locale Support Enabled
 
-By default, Webiny Admin Area is a multi-locale system, which means entries like pages, page categories, forms, settings, and so on, are always created for a specific locale.
+By default, Webiny Admin Area is a multi-locale system. This means entries like pages, page categories, forms, settings, and so on, are always created for a specific locale.
 
-The generated application code follows the same idea and there aren't any additional steps that need to be taken in order to enable multi-locale support. By simply changing the locale via the locales selector located in top-right corner of the screen, users get to manage a completely separate set of data, only available for the selected locale.
+The generated application code follows the same idea and there aren't any additional steps that you need to take in order to enable multi-locale support. By simply changing the locale via the locales selector located in top-right corner of the screen, users get to manage a completely separate set of data, only available for the selected locale.
 
 <CenteredImage src={localesSelector} alt={"Locales Selector"} />
 
