fix: add missing "the"

--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
@@ -78,7 +78,7 @@ The locales selector is visible only when there are two or more locales to choos
 
 The scaffold does not add any additional cloud infrastructure resources. The generated application code is simply added to the existing Admin Area React application code ([`apps/admin/code`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/apps/admin/code)).
 
-Of course, if additional cloud infrastructure resources are needed, you're free amend the [existing cloud infrastructure code](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/apps/admin/pulumi), and reference added and deployed resources in your application code.
+Of course, if additional cloud infrastructure resources are needed, you're free amend the [existing cloud infrastructure code](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/apps/admin/pulumi), and reference the added and deployed resources in your application code.
 
 :::tip
 Note that the supporting GraphQL API has its own cloud infrastructure code, located in the [`api/pulumi`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/api/pulumi) folder. So, if you're planning to add new cloud infrastructure resources that will be referenced within your GraphQL API application code, it makes more sense to introduce cloud infrastructure code changes there, and not in the [`apps/admin/pulumi`](https://github.com/webiny/webiny-js/tree/v5.9.0/packages/cwp-template-aws/template/apps/admin/pulumi), linked above.
