fix: add missing "."

--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
@@ -114,7 +114,7 @@ Contains all of the React components and [hooks](https://github.com/webiny/webin
 
 #### Admin Area React Application
 
-Since the Admin Area React application can be developed locally, once you've completed the scaffold's wizard, there's no need to perform any additional deployments
+Since the Admin Area React application can be developed locally, once you've completed the scaffold's wizard, there's no need to perform any additional deployments.
 
 #### GraphQL API
 
