fix: simplify sentence

--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
@@ -124,7 +124,7 @@ Once you've completed the scaffold's wizard, in order to actually see the change
 
 The most straightforward way to further develop on top of the generated code would be via the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command.
 
-In order to get started, from your project root, you can run the following two commands.
+To get started, from your project root, you can run the following two commands.
 
 #### Admin Area React Application
 
