fix: polish text

--- a/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
+++ b/docs/how-to-guides/webiny-cli/scaffolding/extend-admin-area.mdx
@@ -132,7 +132,7 @@ To get started, from your project root, you can run the following two commands.
 yarn webiny watch apps/admin --env {env}
 ```
 
-This command initiates a new local development server and a watch session on the Admin Area React application. In other words, the React application is running locally and all changes are immediately visible in user's browser as they make them.
+This command initiates a new local development server and a watch session on the Admin Area React application. In other words, the React application is running locally, and all changes are immediately visible in user's browser as they make them.
 
 #### GraphQL API
 
@@ -160,7 +160,7 @@ Check out the [Extend GraphQL API - Development](/docs/how-to-guides/webiny-cli/
 
 ## FAQ
 
-#### How does security (authorization, authorization) work?
+#### How does security (authorization and authorization) work?
 
 Please note that, by default, the authentication and authorization logic isn't included in the generated code.
 
